# RasterRender

./: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Note.md  Platform.cpp  Platform.h  README.md  Rasterizer.cpp  Rasterizer.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  assimp_compat.h  main.cpp
assets/cyborg/: cyborg.blend  cyborg.mtl
